@@ -1,4 +1,5 @@
 import * as cesium from "/js/@sswroom/sswr/cesium.js";
+import * as data from "/js/@sswroom/sswr/data.js";
 import * as kml from "/js/@sswroom/sswr/kml.js";
 import * as leaflet from "/js/@sswroom/sswr/leaflet.js";
 import * as map from "/js/@sswroom/sswr/map.js";
@@ -45,16 +46,20 @@ function onBrowseClick()
 let tileLayer;
 async function onCaptureClick()
 {
-//	let print = new EasyPrint(mapCtrl.mapObj, {tileLayer: tileLayer});
-//	print.printMap("A4Landscape", null);
+	let print = new EasyPrint(mapCtrl.mapObj, {tileLayer: tileLayer});
+	print.printMap("A4Landscape", null);
 
 //	let print = new EasyPrint(mapCtrl.mapObj, {tileLayer: tileLayer});
 //	let png = await print.toPNG(new math.Coord2D(640, 480));
-//	web.openData(png, png.type, "Test.png");
+//	web.openData(png, png.type, null);//"Test.png");
+//	let url = await data.blob2DataURL(png);
+//	web.printImageData(url, web.PaperOrientation.Landscape, "A4", {});
 
-	let print = new EasyPrint(mapCtrl.mapObj, {tileLayer: tileLayer});
-	let svg = await print.toSVG(new math.Coord2D(640, 480));
-	web.openData(svg, svg.type, "Test.svg");
+//	let print = new EasyPrint(mapCtrl.mapObj, {tileLayer: tileLayer});
+//	let svg = await print.toSVG(new math.Coord2D(640, 480));
+//	web.openData(svg, svg.type, "Test.svg");
+//	let url = await data.blob2DataURL(svg);
+//	web.printImageData(url, web.PaperOrientation.Landscape, "A4", {pageTitle: "Testing"});
 
 //	let map = document.getElementById("map");
 //	let svg = await domtoimage.toSvg(map, null);//{imagePlaceholder: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAABmJLR0QA/wD/AP+gvaeTAAAACXBIWXMAAC4jAAAuIwF4pT92AAAAB3RJTUUH6AMECQMVtyBSbwAAABl0RVh0Q29tbWVudABDcmVhdGVkIHdpdGggR0lNUFeBDhcAAAALSURBVAjXY2AAAgAABQAB4iYFmwAAAABJRU5ErkJggg=="});
